Added row with about us section

--- a/index.html
+++ b/index.html
@@ -1,6 +1,10 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
+    <link rel="stylesheet" href="css/bootstrap.css">
+    <link rel="stylesheet" href="css/style.css">
+    <script src="js/jquery-3.6.0.js"></script>
+    <script src="js/script.js"></script>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -15,5 +19,38 @@
             <a>Place an Order</a>
         </ul>
     </header>
+    <section>
+        <h1>Welcome to The Cheese Palace</h1>
+    </section>
+    <section class="container">
+        <h2 style="text-align: center;">About Us</h2>
+            <div class="row">
+                <div class="col-md-4">
+                    <h3>History</h3>
+                    <p>We are a pizza place where we sell all kind of pizza from vegetarian to non-vegetarian</p><br>
+                    <p>We established the institution in Dec 2015</p>
+                </div>
+                <div class="col-md-4">
+                    <h4>Mission Statement</h4>
+                        <p>To be the best pizza parlour in the whole of Kenya</p><br>
+                    <h4>Vision Statement</h4>
+                        <p>"To always stand out in terms of quality and customer satisfaction"</p><br>
+                </div>
+                <div class="col-md-4">
+                    <h3>Contacts</h3>
+                        <p>You can find us at:</p>
+                        <p>7th Floor,</p>
+                        <p>Biha Towers,</p>
+                        <p>Nairobi.</p>
+                </div>
+            </div>
+    </section>
+    <section>
+        <h2>Menu</h2>
+
+    </section>
+    <section>
+        <h2>Place an Order</h2>
+    </section>
 </body>
 </html>
