Added final contents on the menu

--- a/index.html
+++ b/index.html
@@ -74,6 +74,11 @@
         </div>
         <div class="col">
             Veggie Pizza
+            <img src="assets/veggie pizza1.jpg" alt="Vegetable Pizza" height="200px">
+            <p>Large Ksh 1,000</p>
+            <p>Medium Ksh 800</p>
+            <p>Small Ksh 600</p>
+            <p>Contents: Mushrooms, Cheese, Black Olives, Onions</p>
         </div>
         </div>
     </section>
