Styling about us section on css and HTML

--- a/index.html
+++ b/index.html
@@ -32,16 +32,16 @@
                 </div>
                 <div class="col-md-4">
                     <h4>Mission Statement</h4>
-                        <p>To be the best pizza parlour in the whole of Kenya</p><br>
+                        <p>"To be the best pizza parlour in the whole of Kenya"</p><br>
                     <h4>Vision Statement</h4>
                         <p>"To always stand out in terms of quality and customer satisfaction"</p><br>
                 </div>
                 <div class="col-md-4">
-                    <h3>Contacts</h3>
-                        <p>You can find us at:</p>
-                        <p>7th Floor,</p>
-                        <p>Biha Towers,</p>
-                        <p>Nairobi.</p>
+                    <h3 style="text-align: center;">Contacts</h3>
+                        <p style="text-align: center;">You can find us at:</p>
+                        <p style="text-align: center;">7th Floor,</p>
+                        <p style="text-align: center;">Biha Towers,</p>
+                        <p style="text-align: center;">Nairobi.</p>
                 </div>
             </div>
     </section>
