trying out different styles on header and about us section

--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
             <a>Place an Order</a>
         </ul>
     </header>
-    <section>
+    <section class="welcome">
         <h1 style="text-align: center;">Welcome to The Cheese Palace</h1><br>
     </section>
     <section class="container">
