--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
             <a>Place an Order</a>
         </ul>
     </header>
-    <section class="welcome">
+    <!-- <section class="welcome">
         <h1 style="text-align: center;">Welcome to The Cheese Palace</h1><br>
     </section>
     <section class="container">
@@ -44,7 +44,7 @@
                         <p style="text-align: center;">Nairobi.</p>
                 </div>
             </div>
-    </section>
+    </section> -->
     <section class="card">
         <h2 style="text-align: center;">Menu</h2>
         <div class="row">
@@ -82,8 +82,28 @@
         </div>
         </div>
     </section>
-    <section>
+    <section class="container">
         <h2>Place an Order</h2>
+        <div class="row">
+            <div class="col-md-6">
+                <h3>Make a New Order:</h3>
+                <form id="new-order">
+                    <div class="form-group">
+                        <label for="new-client">Name</label>
+                        <input type="text" class="form-control" id="new-name">
+                    </div>
+
+                    <button type="submit" class="btn">Add</button>
+                </form>
+
+                <h3>Your Order:</h3>
+                <ul id="orders">
+
+                </ul>
+            </div>
+
+        </div>
+        
     </section>
 </body>
 </html>
