Adding js to new order

--- a/index.html
+++ b/index.html
@@ -89,10 +89,13 @@
                 <h3>Make a New Order:</h3>
                 <form id="new-order">
                     <div class="form-group">
-                        <label for="new-client">Name</label>
+                        <label for="new-client">First Name</label>
                         <input type="text" class="form-control" id="new-name">
                     </div>
-
+                    <div class="form-group">
+                        <label for="new-last-name">Last name</label>
+                        <input type="text" class="form-control" id="new-last-name">
+                      </div>
                     <button type="submit" class="btn">Add</button>
                 </form>
 
