Adding new name appends on the order list

--- a/index.html
+++ b/index.html
@@ -89,8 +89,8 @@
                 <h3>Make a New Order:</h3>
                 <form id="new-order">
                     <div class="form-group">
-                        <label for="new-client">First Name</label>
-                        <input type="text" class="form-control" id="new-name">
+                        <label for="new-first-name">First Name</label>
+                        <input type="text" class="form-control" id="new-first-name">
                     </div>
                     <div class="form-group">
                         <label for="new-last-name">Last name</label>
@@ -104,7 +104,14 @@
 
                 </ul>
             </div>
-
+            <div class="col-md-6">
+                <div id="show-order">
+                  <h2></h2>
+              
+                  <p>First name: <span class="first-name"></span></p>
+                  <p>Last name: <span class="last-name"></span></p>
+                </div>
+              </div>
         </div>
         
     </section>
