--- a/index.html
+++ b/index.html
@@ -96,13 +96,57 @@
                         <label for="new-last-name">Last name</label>
                         <input type="text" class="form-control" id="new-last-name">
                       </div>
+
+                    <div id="newOrders">
+                        <div class="new-pizza-order">
+                            <div class="form-group">
+                                <label for="new-pizza-size">Select Pizza Size:</label>
+                                <select name="pizza-size" id="pizza-size">
+                                    <option value=" "></option>
+                                    <option value="small">small</option>
+                                    <option value="medium">Medium</option>
+                                    <option value="large">Large</option>
+                                </select>
+                            </div>
+                            <div class="form-group">
+                                <label for="new-pizza-crust">Select Pizza Crust Type:</label>
+                                <select name="pizza-crust" id="pizza-crust">
+                                    <option value=" "></option>
+                                    <option value="crispy">crispy</option>
+                                    <option value="thin">Thin</option>
+                                    <option value="stuffed">Stuffed</option>
+                                    <option value="gluten-free">Gluten-Free</option>
+                                </select>
+                            </div>
+                            <div class="form-group">
+                                <label for="new-pizza-toppings">Select Pizza Toppings:</label>
+                                <select name="pizza-toppings" id="pizza-toppings">
+                                    <option value=" "></option>
+                                    <option value="Pepperoni">Pepperoni</option>
+                                    <option value="Hawaain">Hawaain</option>
+                                    <option value="bbq-chicken">BBQ Chicken</option>
+                                    <option value="veggie">Vegetable</option>
+                                </select>
+                            </div>
+                            <div class="form-group">
+                                <label for="new-pizza-size">Select Pizza Size:</label>
+                                <select name="pizza-size" id="pizza-size">
+                                    <option value=" "></option>
+                                    <option value="small">small</option>
+                                    <option value="medium">Medium</option>
+                                    <option value="large">Large</option>
+                                </select>
+                            </div>
+                        </div>
+
+                    </div>
+                    <span class="btn btn-primary" id="add-order">Another Order</span>
+
                     <button type="submit" class="btn">Add</button>
                 </form>
 
                 <h3>Your Order:</h3>
-                <ul id="orders">
-
-                </ul>
+                <a><ul id="orders"></ul></a>
             </div>
             <div class="col-md-6">
                 <div id="show-order">
@@ -110,6 +154,7 @@
               
                   <p>First name: <span class="first-name"></span></p>
                   <p>Last name: <span class="last-name"></span></p>
+                  <p id="disp"></p>
                 </div>
               </div>
         </div>
