Editing pizza options

--- a/index.html
+++ b/index.html
@@ -154,7 +154,10 @@
               
                   <p>First name: <span class="first-name"></span></p>
                   <p>Last name: <span class="last-name"></span></p>
-                  <p id="disp"></p>
+                  <p>Pizza Orders:</p>
+                  <ul id="pizzas">
+
+                  </ul>
                 </div>
               </div>
         </div>
