--- a/index.html
+++ b/index.html
@@ -101,7 +101,7 @@
                         <div class="new-pizza-order">
                             <div class="form-group">
                                 <label for="new-pizza-size">Select Pizza Size:</label>
-                                <select name="pizza-size" id="pizza-size">
+                                <select name="pizza-size" id="pizza-size" class="form-select">
                                     <option value=" "></option>
                                     <option value="small">small</option>
                                     <option value="medium">Medium</option>
@@ -110,7 +110,7 @@
                             </div>
                             <div class="form-group">
                                 <label for="new-pizza-crust">Select Pizza Crust Type:</label>
-                                <select name="pizza-crust" id="pizza-crust">
+                                <select name="pizza-crust" id="pizza-crust" class="form-select">
                                     <option value=" "></option>
                                     <option value="crispy">crispy</option>
                                     <option value="thin">Thin</option>
@@ -120,21 +120,12 @@
                             </div>
                             <div class="form-group">
                                 <label for="new-pizza-toppings">Select Pizza Toppings:</label>
-                                <select name="pizza-toppings" id="pizza-toppings">
+                                <select name="pizza-toppings" id="pizza-toppings" class="form-select">
                                     <option value=" "></option>
                                     <option value="Pepperoni">Pepperoni</option>
                                     <option value="Hawaain">Hawaain</option>
                                     <option value="bbq-chicken">BBQ Chicken</option>
                                     <option value="veggie">Vegetable</option>
-                                </select>
-                            </div>
-                            <div class="form-group">
-                                <label for="new-pizza-size">Select Pizza Size:</label>
-                                <select name="pizza-size" id="pizza-size">
-                                    <option value=" "></option>
-                                    <option value="small">small</option>
-                                    <option value="medium">Medium</option>
-                                    <option value="large">Large</option>
                                 </select>
                             </div>
                         </div>
