Added if statements on jquery for price

--- a/index.html
+++ b/index.html
@@ -89,13 +89,13 @@
                 <h3>Make a New Order:</h3>
                 <form id="new-order">
                     <div class="form-group">
-                        <label for="new-first-name">First Name</label>
+                        <label for="new-first-name">Name</label>
                         <input type="text" class="form-control" id="new-first-name">
                     </div>
-                    <div class="form-group">
+                    <!-- <div class="form-group">
                         <label for="new-last-name">Last name</label>
                         <input type="text" class="form-control" id="new-last-name">
-                      </div>
+                      </div> -->
 
                     <div id="newOrders">
                         <div class="new-pizza-order">
@@ -131,7 +131,7 @@
                         </div>
 
                     </div>
-                    <span class="btn btn-primary" id="add-order">Another Order</span>
+                    <button class="btn btn-primary" id="add-order">Another Order</button>
 
                     <button type="submit" class="btn">Add</button>
                 </form>
@@ -144,10 +144,10 @@
                   <h2></h2>
               
                   <p>First name: <span class="first-name"></span></p>
-                  <p>Last name: <span class="last-name"></span></p>
                   <p>Pizza Orders:</p>
                   <ul id="pizzas">
-
+//delivery or not
+//*show/hide*//
                   </ul>
                 </div>
               </div>
