editing the page to look better

--- a/index.html
+++ b/index.html
@@ -13,39 +13,10 @@
 </head>
 
 <body>
-    <header>
-        <ul>
-            <li><a>The Cheese Palace</a></li>
-            <li style="float: right;"><a>Menu</a></li>
-            <li><a>Place an Order</a></li>
-        </ul>
-    </header>
-    <!-- <section class="welcome">
-        <h1 style="text-align: center;">Welcome to The Cheese Palace</h1><br>
+    <section class="card">
+        <h1 style="text-align: center;">Welcome to the Cheese Palace</h1>
     </section>
-    <section class="container">
-        <h2 style="text-align: center;">About Us</h2>
-            <div class="row">
-                <div class="col-md-4">
-                    <h3>History</h3>
-                    <p>We are a pizza place where we sell all kind of pizza from vegetarian to non-vegetarian</p><br>
-                    <p>We established the institution in Dec 2015</p>
-                </div>
-                <div class="col-md-4">
-                    <h4>Mission Statement</h4>
-                        <p>"To be the best pizza parlour in the whole of Kenya"</p><br>
-                    <h4>Vision Statement</h4>
-                        <p>"To always stand out in terms of quality and customer satisfaction"</p><br>
-                </div>
-                <div class="col-md-4">
-                    <h3 style="text-align: center;">Contacts</h3>
-                        <p style="text-align: center;">You can find us at:</p>
-                        <p style="text-align: center;">7th Floor,</p>
-                        <p style="text-align: center;">Biha Towers,</p>
-                        <p style="text-align: center;">Nairobi.</p>
-                </div>
-            </div>
-    </section> -->
+    
     <section class="card">
         <h2 style="text-align: center;">Menu</h2>
         <div class="row">
