added delivery option

--- a/index.html
+++ b/index.html
@@ -118,7 +118,15 @@
                     <p>First name: <span class="first-name"></span></p>
                     <p>Pizza Orders:</p>
                     <ul id="pizzas">
-                    </ul>
+                    </ul> <br><br>
+
+                    <button type="button">Home Delivery</button>
+                    <button type="button">Pick Up</button>
+                </div>
+                <div id="show-location">
+                    <p>Location</p>
+                    <p>Number</p>
+
                 </div>
             </div>
         </div>
